<resources>
    <string name="app_name">Kitabeli-AE</string>
    <string name="action_settings">Settings</string>

    <string name="error_network">Terjadi kesalahan jaringan. Silakan coba lagi.</string>
    <string name="error_no_internet_connection">Silakan periksa koneksi internet Anda dan coba lagi.</string>
    <string name="error_server">Terjadi kesalahan server. Silakan coba lagi</string>
    <string name="error_unknown">Terjadi kesalahan yang tidak diketahui. Silakan coba lagi.</string>
    <string name="error_auth">Anda tidak memiliki izin untuk mengakses layanan.</string>


    <string name="email_validation_message">email anda salah.</string>
    <string name="password_validation_message">tolong masukkan password anda.</string>
    <string name="role_validation_message">harap pilih role anda.</string>


    <string name="cari_produk">Cari Produk</string>
    <string name="simpan">Simpan</string>
    <string name="cek_stok_hari_ini">Cek Stok Hari Ini</string>
    <string name="tambah_cek_stok_kios">Tambah Cek Stok Kios</string>
    <string name="tambah_cek_stok">Tambah Cek Stok</string>
    <string name="cari_kios">Cari Kios</string>
    <string name="kios">Kios</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="ajukan_validasi">Ajukan Validasi</string>
    <string name="masukkan_email_kamu_di_sini">Masukkan email kamu di sini</string>
    <string name="masukkan_password_kamu_di_sini">Masukkan password kamu di sini</string>
    <string name="masuk">Masuk</string>
    <string name="menunggu_verifikasi">Menunggu verifikasi</string>
    <string name="produk">PRODUK</string>
    <string name="status">STATUS</string>
    <string name="tabel_stok">Tabel Stok</string>
    <string name="nominal_perlu_ditarik">Nominal perlu ditarik</string>
    <string name="ae_agreement_text">Dengan ini saya menyatakan sudah menarik dan menerima uang sejumlah di atas dari kios ini</string>
    <string name="ko_agreement_text">Dengan klik “Bayar Sekarang” saya telah menyetujui tagihan yang dikirimkan oleh tim KitaBeli dan bersedia membayar secara penuh.</string>
    <string name="pemilik_kios">Pemilik kios diwakilkan dalam penarikan uang ini</string>
    <string name="pemilik_kios_selected_subtitle">(Perwakilan Pemilik Kios)</string>
    <string name="pemilik_kios_subtitle">(Pemilik Kios)</string>
    <string name="pemilik_kios_hint"> Nama perwakilan</string>
    <string name="ae_kitabeli_text">(AE Kitabeli)</string>

    <string name="mitra">Mitra</string>
    <string name="ae_kitabeli">AE KitaBeli</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="cek_stok_terakhir">Cek Stok Terakhir</string>
    <string name="top_up">Top up</string>
    <string name="cek_stok_saat_ini">Cek Stok Saat Ini</string>
    <string name="perlu_dibayar">Perlu Dibayar</string>
    <string name="clear_pad">Hapus Bantalan</string>
    <string name="save_signature">Simpan Tanda Tangan</string>
    <string name="belum">Batalkan Penagihan</string>
    <string name="sudah_terima">Kirim OTP</string>
    <string name="minta_otp">Minta OTP</string>
    <string name="dokumen_cek_stok_barang">DOKUMEN CEK STOK BARANG</string>
    <string name="legal_conent">Dengan ditandatanganinya Hasil Pemeriksaan ini, mitra telah mengetahui dan menyetujui hasil pemeriksaan. Dalam hal terdapat perbedaan antara data penjualan dengan data hasil pemeriksaan, Mitra wajib melakukan pembayaran ganti rugi sesuai data hasil selisih tersebut</string>
    <string name="ohh">Ohh…</string>
    <string name="retry">Retry</string>
    <string name="belum_ada_cek_stok_kios_hari_ini">Belum ada cek stok kios hari ini</string>
    <string name="added_successfully">Berhasil ditambahkan.</string>
    <string name="apakah_kamu_sudah_menerima_uang_hasil_penjualan">Apakah kamu sudah menerima uang hasil penjualan?</string>
    <string name="wajib_setor_uang_penjualan_bila_proses_input_selesai_atau_mengulang_input_data_bila_belum">Wajib setor uang penjualan bila proses input selesai. Atau mengulang input data bila belum.</string>
    <string name="title_lorem_ipsum">Masukkan Kode Kios</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_quisque_dictum_magna_metus_sed_luctus_ex_dictum_non">Pastikan kode kios yang anda masukkan benar sesuai dengan yang sedang anda kunjungi!</string>
    <string name="kios_code">Kode Kios</string>
    <string name="ok">Oke</string>
    <string name="masukkan_otp_yang_terkirim_di_kios_dashboard">Masukkan OTP yang terkirim di kios dashboard</string>
    <string name="logout_">Logout?</string>
    <string name="cancel">Batal</string>
    <string name="logout_msg">Anda yakin ingin logout?</string>
    <string name="cancelled_task">Tugas Dibatalkan</string>
    <string name="save_sign">Tambahkan Tanda Tangan</string>
    <string name="tanda_tangan_dokumen">Tanda Tangan Dokumen</string>
    <string name="harap_cek_dan_masukkan_kembali_data_produk_yang_ditolak_dengan_benar">Harap cek dan masukkan kembali data produk yang ditolak dengan benar</string>
    <string name="qr_code_error">Terjadi kesalahan. Mohon coba kembali</string>
    <string name="title_qr_code">Scan Kode QR Kios</string>
    <string name="subtitle_qr_code">Silahkan scan kode QR kios untuk melanjutkan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="scan_code">Gunakan Scan QR</string>
    <string name="penjualan_di_aplikasi_n_link_kios">Penjualan di Aplikasi\n/Link Kios</string>
    <string name="off_platform_text">Penjualan Manual</string>
    <string name="training_video_title">Video Pelatihan</string>
    <string name="batalkan_penagihan">Batalkan Penagihan</string>
    <string name="accepted">Sudah Terima</string>
    <string name="not_yet">Belum</string>
    <string name="bank_account_alert_title">Pemilik Kios Belum Memiliki Akun Bank</string>
    <string name="bank_account_alert_desc">Untuk melanjutkan proses penarikan, bantu pemilik kios menambahkan akun banknya sekarang.</string>
    <string name="stock_op_how_to"><font fgcolor="#1E1E1E">Proses validasi jumlah barang yang terjual di Kiosmu agar kamu dapat membayar tagihan Kios dan </font><font fgcolor="#FF5F0B">mendapatkan komisi.</font></string>
    <string name="stock_op_max_trf"><font fgcolor="#1E1E1E">Transfer pembayaran </font><b><font fgcolor="#FF5F0B">maks. 1 jam</font></b><font fgcolor="#1E1E1E">\nsejak mendapatkan tagihan.</font></string>
    <string name="check_stock_dialog_title_text">Apakah Kamu Yakin Stok Sudah Sesuai Semua?</string>
    <string name="check_stock_dialog_desc_text">Jika stok tidak sesuai maka validasi akan gagal dan kamu harus input kembali dari awal.</string>
    <string name="ya_yakin">Ya, Yakin</string>
    <string name="belum_cek_kembali">Belum, Cek Kembali</string>
    <string name="email_label_text">Email *</string>
    <string name="password_label_text">Password *</string>
    <string name="login_as_text">Masuk Sebagai (Pilih Salah Satu) *</string>
    <string name="kiosk_owner_text">Pemilik Kios</string>
    <string name="help">Bantuan</string>
    <string name="do_payment_before_text">Lakukan pembayaran sebelum:</string>
    <string name="timer_placeholder">60:00</string>
    <string name="invoice_id_placeholder">ID: 123123</string>
    <string name="date_range_placeholder">19 - 25 Nov 2022</string>
    <string name="detail_pembayaran">Detail Pembayaran</string>
    <string name="penjualan_text">Penjualan</string>
    <string name="sale_amount_placeholder">Rp265.000</string>
    <string name="incentive">Komisi</string>
    <string name="incentive_placeholder">Rp0</string>
    <string name="pelajari_cara_perhitungan_komisi">Pelajari cara perhitungan komisi</string>
    <string name="total_tagihan">Total Tagihan</string>
    <string name="penjualan_komisi">(Penjualan - Komisi)</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="kode_bank">Kode Bank</string>
    <string name="copy">Salin</string>
    <string name="bank">Bank</string>
    <string name="kembali">Kembali</string>
    <string name="on_boarding_text">Masukkan daftar barang yang\nada di Kiosmu.</string>
    <string name="apa_itu_cek_stok_barang">Apa itu Cek Stok Barang?</string>
    <string name="check_stock_time_info">Cek stok hanya bisa dilakukan\nSenin-Jumat pukul 09.00-19.00 WIB</string>
    <string name="gimana_caranya">Gimana Caranya?</string>
    <string name="putar_video">Putar Video</string>
    <string name="konfirmasi_semua_pesanan_npelanggan">Konfirmasi semua pesanan\npelanggan.</string>
    <string name="ambil_foto_masing_masing">Ambil foto masing-masing jenis\nbarang yang tersedia di Kiosmu.</string>
    <string name="ajukan_verifikasi">Ajukan verifikasi dan bayar sesuai\njumlah tagihan yang tertera.</string>
    <string name="batalkan">Batalkan</string>
    <string name="mulai">Mulai</string>
    <string name="pelayanan_untuk_kios">Pelayanan Untuk Kios</string>
    <string name="cek_stok_kios">Cek Stok Kios</string>
    <string name="video_pelatihan">Video Pelatihan</string>
    <string name="pengunduran_diri_kios">Pengunduran Diri Kios</string>
    <string name="isi_jika_ada_kios_yang_ingin_berhenti">Isi jika ada kios yang ingin berhenti</string>
    <string name="penarikan_barang_kios">Penarikan Barang Kios</string>
    <string name="laporkan_kondisi_dan_jenis_barang">Laporkan kondisi dan jenis barang</string>
    <string name="tidak_ada_lanjut">Tidak Ada, Lanjut</string>
    <string name="confirm_resign_title">Apakah betul pemilik kios ingin mengundurkan diri?</string>
    <string name="confirm_resign_desc">Jawaban kamu akan langsung masuk ke sistem dan tidak bisa diulang kembali</string>
    <string name="betul">Betul</string>
    <string name="tidak">Tidak</string>
    <string name="item_return_title">Penarikan Stok Bermasalah</string>
    <string name="nama_produk_label"><font fgcolor="#1E1E1E">Nama Produk</font><font fgcolor="#E53535">*</font></string>
    <string name="reason_label"><font fgcolor="#1E1E1E">Alasan</font><font fgcolor="#E53535">*</font></string>
    <string name="expired_label"><font fgcolor="#1E1E1E">Tanggal Kedaluwarsa</font><font fgcolor="#E53535">*</font></string>
    <string name="qty_label"><font fgcolor="#1E1E1E">Jumlah</font><font fgcolor="#E53535">*</font></string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="alasan">Alasan</string>
    <string name="tanggal_kedaluwarsa">Tanggal Kedaluwarsa</string>
    <string name="hapus">Hapus</string>
    <string name="edit">Edit</string>
    <string name="konfirmasi_ko">Konfirmasi Pemilik Kios</string>
    <string name="ask_kiosk_otp_desc">Minta kode OTP yang dikirimkan ke pemilik kios untuk konfirmasi</string>
    <string name="lanjut">Lanjut</string>
    <string name="does_inputted_stock_correct">Apakah stok yang diinput sudah benar?</string>
    <string name="does_inputted_stock_correct_desc">Stok yang kamu isi akan langsung masuk ke sistem dan tidak bisa diulang kembali</string>
    <string name="success_resend_otp">OTP Berhasil dikirim ulang</string>
    <string name="produk_harus_diisi">Produk harus diisi</string>
    <string name="alasan_harus_diisi">Alasan harus diisi</string>
    <string name="tanggal_harus_diisi">Tanggal harus diisi</string>
    <string name="jumlah_harus_diisi">Jumlah harus diisi</string>
    <string name="pilih_alasan">Pilih Alasan</string>
    <string name="pilih">Pilih</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>
    <string name="detail_stok">Detail Stok</string>
    <string name="return_request_success_msg">Request Penarikan Barang Kios berhasil dibuat.</string>
    <string name="resign_request_success_msg">Request Pengunduran Diri Kios berhasil dibuat.</string>
    <string name="stock_withdrawal_title">Penarikan Stok Kios</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="survey_kios">Survey Kios</string>
</resources>