<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/bank_account_alert_title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:textColor="@color/orange50"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/screen_margin"
            android:fontFamily="@font/inter_medium"
            android:text="@string/bank_account_alert_desc"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/orange50"
            android:letterSpacing="0"
            android:text="@string/ok"
            app:cornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@+id/message"
            app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>