<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tabel_stok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semi_bold"
            android:paddingVertical="10dp"
            android:text="@string/tabel_stok"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/img_info_cek_stok_terakhir"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_info_blue"
            app:layout_constraintBottom_toBottomOf="@+id/tabel_stok"
            app:layout_constraintEnd_toEndOf="@+id/cek_stok_terakhir"
            app:layout_constraintStart_toStartOf="@+id/cek_stok_terakhir"
            app:layout_constraintTop_toTopOf="@+id/tabel_stok"
            tools:ignore="ContentDescription" />


        <ImageView
            android:visibility="gone"
            android:id="@+id/img_info_top_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_info_green"
            app:layout_constraintBottom_toBottomOf="@+id/tabel_stok"
            app:layout_constraintEnd_toEndOf="@+id/top_up"
            app:layout_constraintStart_toStartOf="@+id/top_up"
            app:layout_constraintTop_toTopOf="@+id/tabel_stok"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/nama_produk"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:background="@color/grey"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/nama_produk"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cek_stok_terakhir"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabel_stok" />

        <TextView
            android:id="@+id/cek_stok_terakhir"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/blue"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/cek_stok_terakhir"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/top_up"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/nama_produk"
            app:layout_constraintTop_toTopOf="@+id/nama_produk" />


        <TextView
            android:id="@+id/top_up"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:background="@color/green"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/top_up"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cek_stok_saat_ini"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/cek_stok_terakhir"
            app:layout_constraintTop_toTopOf="@+id/nama_produk" />


        <TextView
            android:id="@+id/cek_stok_saat_ini"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="3dp"
            android:background="@color/dark_blue"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/cek_stok_saat_ini"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/perlu_dibayar"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/top_up"
            app:layout_constraintTop_toTopOf="@+id/nama_produk" />

        <TextView
            android:id="@+id/perlu_dibayar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/orange60"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/perlu_dibayar"
            android:textAppearance="?attr/textAppearanceBodySmall"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/cek_stok_saat_ini"
            app:layout_constraintTop_toTopOf="@+id/nama_produk" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>