<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.kitabeli.ae.ui.login.LoginViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_arrow"
                app:title="@string/tambah_cek_stok" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/screen_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/screen_margin" />

            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/kios_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF5F0"
                android:paddingHorizontal="@dimen/screen_margin"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/cari_kios"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    app:drawableStartCompat="@drawable/ic_home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/kios"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:drawableEndCompat="@drawable/ic_arrow_down" />

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_kios"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="10dp"
                android:background="@color/white"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/bottom_view"
                app:layout_constraintTop_toBottomOf="@+id/kios_container"
                tools:listitem="@layout/item_product_group" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="200dp"
                app:icon="@drawable/round_add_circle_outline_24"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraLarge"
                android:text="@string/tambah_produk"
                android:layout_marginBottom="@dimen/screen_margin"
                android:backgroundTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/recycler_view_kios"
                android:layout_height="45dp"/>

            <FrameLayout
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/screen_margin"
                    android:layout_marginBottom="@dimen/screen_margin"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/ajukan_validasi"
                    app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall" />

            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>