<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/screen_margin"
                android:background="?selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/round_close_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />


            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/screen_margin"
                android:layout_marginTop="@dimen/screen_margin"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/apakah_kamu_sudah_menerima_uang_hasil_penjualan"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />


            <TextView
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/screen_margin"
                android:fontFamily="@font/inter_regular"
                android:text="@string/wajib_setor_uang_penjualan_bila_proses_input_selesai_atau_mengulang_input_data_bila_belum"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_belum"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/screen_margin"
                android:layout_marginTop="@dimen/screen_margin"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="40dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/belum"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_sudah_terima"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall"
                app:strokeColor="?attr/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sudah_terima"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/screen_margin"
                android:layout_marginEnd="@dimen/screen_margin"
                android:text="@string/sudah_terima"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_belum"
                app:layout_constraintTop_toBottomOf="@+id/message"
                app:shapeAppearanceOverlay="?attr/shapeAppearanceCornerExtraSmall" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</layout>